blend up back; space right on mobile needs to be fixed

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
     margin: 0px;
     padding: 0px;
     font-family: 'Source Sans Pro', sans-serif;
+    position: relative;
 }
 
 *,
